<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dateTv"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/changa_light"
            android:gravity="center"
            android:text="Date"
            android:textColor="#000"
            android:textSize="18sp"
            android:layout_margin="1dp"
            />

        <TextView
            android:id="@+id/dayTv"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/changa_light"
            android:gravity="center"
            android:text="Day"
            android:textColor="#000"
            android:layout_margin="1dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/fajrTv"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/changa_light"
            android:gravity="center"
            android:text="Fazr"
            android:textColor="#000"
            android:layout_margin="1dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/shorookTv"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/changa_light"
            android:gravity="center"
            android:text="@string/shorook"
            android:textColor="#000"
            android:layout_margin="1dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/zuhurTv"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/changa_light"
            android:gravity="center"
            android:text="@string/dohr"
            android:textColor="#000"
            android:layout_margin="1dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/asrTv"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/changa_light"
            android:gravity="center"
            android:text="@string/asr"
            android:textColor="#000"
            android:layout_margin="1dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/maghribTv"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/changa_light"
            android:gravity="center"
            android:text="@string/maghrib"
            android:textColor="#000"
            android:layout_margin="1dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/ishaTv"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/changa_light"
            android:gravity="center"
            android:text="@string/isha"
            android:textColor="#000"
            android:layout_margin="1dp"
            android:textSize="18sp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>