<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context=".FragmentMonthly">

    <HorizontalScrollView
        android:id="@+id/hrScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/adView3"
        android:layout_marginBottom="0dp"
        android:overScrollMode="never"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/dateTv"
                    android:layout_width="42dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:fontFamily="@font/changa_light"
                    android:gravity="center"
                    android:text="Date"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/dayTv"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:fontFamily="@font/changa_light"
                    android:gravity="center"
                    android:text="Day"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fajrTv"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:fontFamily="@font/changa_light"
                    android:gravity="center"
                    android:text="Fazr"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/shorookTv"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:fontFamily="@font/changa_light"
                    android:gravity="center"
                    android:text="@string/shorook"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/zuhurTv"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:fontFamily="@font/changa_light"
                    android:gravity="center"
                    android:text="@string/dohr"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/asrTv"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:fontFamily="@font/changa_light"
                    android:gravity="center"
                    android:text="@string/asr"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/maghribTv"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:fontFamily="@font/changa_light"
                    android:gravity="center"
                    android:text="@string/maghrib"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ishaTv"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:fontFamily="@font/changa_light"
                    android:gravity="center"
                    android:text="@string/isha"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/my_recycler_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:overScrollMode="never"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:scrollbarStyle="outsideInset"
                android:scrollbars="horizontal" />

        </LinearLayout>
    </HorizontalScrollView>


        <com.google.android.gms.ads.AdView
            android:id="@+id/adView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            app:adSize="SMART_BANNER"
            app:adUnitId="ca-app-pub-5889002374367451/7146965923"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="visible"/>



</RelativeLayout>