<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentDailyPrayer"
    android:paddingRight="15dp"
    android:paddingLeft="15dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        android:id="@+id/test"
        app:cardElevation="15dp"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#FFF">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ECF1FA">

                <TextView
                    android:id="@+id/awkat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/changa_light"
                    android:text="@string/menu_prayertimes"
                    android:textColor="#000000"
                    android:layout_margin="16dp"
                    android:textSize="24sp" />
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/awkat"
                    android:src="@drawable/map"
                    android:layout_margin="16dp"
                    />

                <TextView
                    android:id="@+id/city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/awkat"
                    android:layout_marginStart="55dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/changa_light"
                    android:text="Lahore"
                    android:textColor="#000"
                    android:textSize="24sp" />

            </RelativeLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="16dp"
                android:baselineAligned="false"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/changa_light"
                        android:text="@string/fajr"
                        android:layout_alignParentStart="true"
                        android:textSize="24sp"
                        android:textColor="#000"
                        tools:ignore="RelativeOverlap"
                        />

                    <TextView
                        android:id="@+id/fajr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/changa_light"
                        android:text="00:00"
                        android:layout_alignParentEnd="true"
                        android:textColor="#000"
                        android:textSize="24sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/changa_light"
                        android:text="@string/shorook"
                        android:layout_alignParentStart="true"
                        android:textSize="24sp"
                        android:textColor="#000"
                        tools:ignore="RelativeOverlap"
                        />

                    <TextView
                        android:id="@+id/shorook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/changa_light"
                        android:text="00:00"
                        android:layout_alignParentEnd="true"
                        android:textColor="#000"
                        android:textSize="24sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/changa_light"
                        android:text="@string/dohr"
                        android:textSize="24sp"
                        android:textColor="#000"
                        android:layout_alignParentStart="true"/>

                    <TextView
                        android:id="@+id/duhur"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:fontFamily="@font/changa_light"
                        android:text="00:00"
                        android:textSize="24sp"
                        android:textColor="#000"/>
                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/changa_light"
                        android:text="@string/asr"
                        android:textSize="24sp"
                        android:textColor="#000"
                        android:layout_alignParentStart="true"/>

                    <TextView
                        android:id="@+id/asr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:fontFamily="@font/changa_light"
                        android:text="00:00"
                        android:textSize="24sp"
                        android:textColor="#000"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/changa_light"
                        android:text="@string/maghrib"
                        android:textSize="24sp"
                        android:textColor="#000"
                        android:layout_alignParentStart="true"/>

                    <TextView
                        android:id="@+id/maghrib"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:fontFamily="@font/changa_light"
                        android:text="00:00"
                        android:textSize="24sp"
                        android:textColor="#000"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/changa_light"
                        android:text="@string/isha"
                        android:textSize="24sp"
                        android:textColor="#000"
                        android:layout_alignParentStart="true"/>

                    <TextView
                        android:id="@+id/isha"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:fontFamily="@font/changa_light"
                        android:text="00:00"
                        android:textSize="24sp"
                        android:textColor="#000"/>
                </RelativeLayout>


            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="SMART_BANNER"
        app:adUnitId="ca-app-pub-5889002374367451/7146965923"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>